--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ﻿# Site settings
 title: WangHan's Blog
-SEOTitle: 
+SEOTitle: TA
 header-img: img/home-bg.jpg
 email: dmwanghan97@gmail.com
 description: ""
